0024134: Wrong result of projection point on the face Changed Bnd_SphereUBTreeSelector for the Extrema_ExtAlgo_Tree projection algorithm properly work Test case for issue CR24134